--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_redux: ^0.6.0
-  localstorage: ^3.0.0
   http: ^0.12.2
+  flutter_secure_storage: ^3.3.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
