--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ flutter:
     - assets/images/barber-store.jpg
     - assets/images/hair-store.jpg
     - assets/images/tatoo-store.jpg
+    - assets/images/experience-3.jpeg
+    - assets/images/experience-2.jpeg
+    - assets/images/experience-1.jpeg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
