--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.2
   flutter_secure_storage: ^3.3.4
   font_awesome_flutter: ^8.8.1
+  intl: ^0.16.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -56,6 +57,9 @@ flutter:
     - assets/images/experience-3.jpeg
     - assets/images/experience-2.jpeg
     - assets/images/experience-1.jpeg
+    - assets/images/recommended-1.jpeg
+    - assets/images/recommended-2.jpeg
+    - assets/images/recommended-3.jpeg
 
   #   - images/a_dot_ham.jpeg
 
